resolved fdo#70750 reverted inappropriate implementation of fdo#63546

This is a combination of 2 commits.

Revert "fdo#63546: set appropriate alignment when wrt direction of cells is changed."

This reverts commit 706e3b8e43df94310b2fe8458da67875073a046c.

Related previous commits that commit depends on will also be reverted.

Triggered by fdo#70750 inspecting the code it turned out that the
changes for fdo#63546 did several things wrong:
* looping over individual cells of a large selected range results in
  slicing and merging ScAttrArray for each row in each column which is
  utterly slow (the reason for fdo#70750)
* instead of executing the changes in ScFormatShell calls should had
  been forwarded through ScTabViewShell to be passed down to ScViewFunc,
  ScDocFunc, ScDocument, ...
* setting hard attributes on all cells (except if already centered or
  block justified) is not wanted
  * value cells for example should stay automatically right justified if
    no justification is given yet
  * overwriting already existing left or right justification may not be
    what the user expects
  * applied styles' justification is overridden this way

(cherry picked from commit 2f29e544932633a01162ecb80e50872eabdd2bc1)

Revert "fix fdo#63546 : set appropriate alignment when writing direction is changed."

This reverts commit 16f508686c29bfa244ca6f81b5ab3bbaf5fef2a7.
(cherry picked from commit 955281e50e2728932edc3b688ce3cf235bdfd0c9)

Conflicts:
	sc/source/ui/view/formatsh.cxx

Change-Id: I53fc56a09f2b396577fff3ec679b39837fc2f649
Reviewed-on: https://gerrit.libreoffice.org/6691
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>